--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
-          - go-version: '^1.13.10'
+          go-version: '^1.13.10'
 
       - run: |
           go test ./bot
